tests/NormalTests/paczka1/small_fuzzy/89343236.err
Error in line 1: o7H A845 30,7
Error in line 7: p2CsDT4xRu A845 36,27
Error in line 4: A845 S355 16,3
Error in line 8: A845 S690 9,1
